[gd_scene load_steps=12 format=3 uid="uid://deqiitjxnc6c7"]

[ext_resource type="Script" path="res://scenes/new_note.gd" id="1_ge577"]
[ext_resource type="Theme" uid="uid://dq7rs7x41380r" path="res://main_theme.tres" id="1_kl0e6"]
[ext_resource type="Texture2D" uid="uid://bqmqab07ag8xr" path="res://icons/left_arrow_icon.png" id="2_w635v"]
[ext_resource type="FontFile" uid="uid://b46o6a82pckne" path="res://fonts/ComicNeue-Bold.ttf" id="3_fbymm"]
[ext_resource type="FontFile" uid="uid://dktjy0vnlqres" path="res://fonts/ComicNeue-Regular.ttf" id="4_3r6gx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgpag"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pq15t"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 10.0
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15ram"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glthv"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6m0br"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 10.0
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3n2sg"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="NewNote" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ge577")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_right = -12.0
offset_bottom = 60.0
grow_horizontal = 2
theme = ExtResource("1_kl0e6")

[node name="BackButton" type="Button" parent="VBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -22.5
offset_right = 106.0
offset_bottom = 22.5
grow_vertical = 2
mouse_default_cursor_shape = 2
text = "Back"
icon = ExtResource("2_w635v")
expand_icon = true

[node name="SaveButton" type="Button" parent="VBoxContainer/Control/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -22.0
offset_bottom = 23.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 2
text = "Save
"

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/Control2/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control2/ScrollContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer/Control2/ScrollContainer/VBoxContainer/Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control2/ScrollContainer/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLineEdit" type="LineEdit" parent="VBoxContainer/Control2/ScrollContainer/VBoxContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fbymm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_dgpag")
theme_override_styles/focus = SubResource("StyleBoxFlat_pq15t")
theme_override_styles/read_only = SubResource("StyleBoxFlat_15ram")
placeholder_text = "Title"
clear_button_enabled = true
caret_blink = true

[node name="ContentTextEdit" type="TextEdit" parent="VBoxContainer/Control2/ScrollContainer/VBoxContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_3r6gx")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_glthv")
theme_override_styles/focus = SubResource("StyleBoxFlat_6m0br")
theme_override_styles/read_only = SubResource("StyleBoxFlat_3n2sg")
placeholder_text = "Type something here..."
wrap_mode = 1
caret_blink = true

[node name="Control2" type="Control" parent="VBoxContainer/Control2/ScrollContainer/VBoxContainer/Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Popup" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="Panel" type="PanelContainer" parent="Popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kl0e6")

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="Popup/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fbymm")
theme_override_font_sizes/font_size = 20
text = "You have an unsaved note"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Popup/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3r6gx")
theme_override_font_sizes/font_size = 13
text = "Do you want to leave without saving?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 66

[node name="CancelButton" type="Button" parent="Popup/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Cancel"

[node name="LeaveButton" type="Button" parent="Popup/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Leave"

[connection signal="pressed" from="VBoxContainer/Control/Control/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/Control/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/HBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
